# myutils

./: .gitignore  README.md  ase_increase_distance.py  distance.py  miscellaneous.py  pytest.ini  setup.cfg  time-gaussian.py  trans_G09-pdb.py  trans_to_pdb.py  visualization.py
.github/workflows/: environment.yml  test.yml
doc/: about.rst  conf.py  index.rst
doc/_build/doctrees/: about.doctree  environment.pickle  index.doctree  install.doctree
doc/_build/html/: .buildinfo  about.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/modules/: modules.rst  peptides.rst  plotters.rst
doc/modules/ase_utils/: change_distance.rst  tools.rst
doc/modules/sith/: constrain_rupture.rst  extract_dofs.rst  find_extraDOFs.rst  set_proline_state.rst  trans_xyz.rst
doc/modules/sith2/: visualization.rst
equilibrate/: md-gromacs.sh  nvt.mdp
gromacs/: analysis.sh  peptide_pulling.sh  pulling.mdp  pulling.sh
gromacs/equilibrate/: preMD-gromacs.sh
miscellaneous/: miscellaneous.py  sith_analysis.py
sith/: compare_DOFs.py  extract_optimized.py  optimization.sh  sith_analysis.py  stretching.sh  workflow.sh
src/myutils/: analysis.py  basics.sh  jupyter.py  miscellaneous.py  peptides.py  pkges_installer.sh  plotters.py
src/myutils/ase_utils/: change_distance.py  molecules.py  tools.py
src/myutils/cli/: generate_main.sh  main.py  main_template.py
src/myutils/doc_scripts/: doc_modules.sh  doc_pythonfile.sh
src/myutils/gromacs/: analysis.sh  (+7 more)
visualization/: example.ipynb  visualizator.py
visualization/.ipynb_checkpoints/: example-checkpoint.ipynb
(+170 files in other folders)
