[metadata]
name = myutils
version = 0.2.0
license = MIT
description = My own utils (I am Daniel Sucerquia, PhD student at HITS -January 2023)
long_description = file: README.md
author = Hits_mbm
author_email = daniel.sucerquia@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent


[options]
packages = 
    find:
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    MDAnalysis
    pytest
    sphinx
    sphinx_rtd_theme
    ipython
    ipywidgets
python_requires = >= 3.9

[options.package_data]
* = *.sh, *.mdp

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    myutils = myutils.cli.main:main